(executable
 (name test)
 (libraries alcotest depyt))

(alias
 (name runtest)
 (deps test.exe)
 (action
  (run %{deps} --color=always)))

; (alias
; ((name runtest)
;  (deps (../README.md (package depyt)))
;  (action (progn
;           (run mdx test ${<})
;           (diff? ${<} ${<}.corrected)))))
